--- a/index.html
+++ b/index.html
@@ -461,7 +461,18 @@
   </div>
   
 </div>
-</section></div>
+</section>
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script></div>
             <aside class="col-md-4">
                 <form action="/search" class="search-form">
     <div class="input-group">
