--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Content Manager</title>
+	<script src="https://unpkg.com/netlify-auth-providers"></script>
 </head>
 <body>
 	<!-- Include the script that builds the page and powers Netlify CMS -->
