--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -100,7 +100,7 @@
     <div class="row gx-lg-5 gx-2">
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
-            <p>Protokoll der Sitzung vom 5.4.2022 (deutsch) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf" title="Protokoll der 2. GV e-editiones">Protokoll der 2. GV e-editiones</a></p>
+            <p>Protokoll der Sitzung vom 5.4.2022 (deutsch) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">Protokoll der 2. GV e-editiones</a></p>
 <h3 id="assembly-2022-5th-april-2022" tabindex="-1">Assembly 2022 5th April 2022</h3>
 <ul>
 <li>Invitation/Agenda - 2nd AGM of e-editiones (german, english) <a href="/resources/2022/Invitation_Agenda_2ndAGM e-editiones.pdf">PDF</a></li>
