--- a/pages/meeting-minutes/index.html
+++ b/pages/meeting-minutes/index.html
@@ -100,11 +100,18 @@
     <div class="row gx-lg-5 gx-2">
         <div class="col-lg-9 col-md-9">
             <h1>Meeting Minutes</h1>
-            <p>Protokoll der Sitzung vom 5.4.2022 (deutsch) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">Protokoll der 2. GV e-editiones</a></p>
+            <h3 id="assembly-2023-2nd-may-2023-(16-h-cest)" tabindex="-1">Assembly 2023 2nd May 2023 (16 h CEST)</h3>
+<ul>
+<li>Invitation/Agenda - 3nd AGM of e-editiones (german, english) <a href="/2023/...">PDF</a></li>
+<li>[ad 3] Protokoll der Sitzung vom 5.4.2022 (deutsch) <a href="/resources/2022/Protokoll-der-2.-GV-e-editiones-1.pdf">Protokoll der 2. GV e-editiones</a></li>
+<li>[ad 4] <a href="/posts/newsletter-2023-1/">Annual Report (english)/Newsletter 2023/1</a></li>
+<li>[ad 5] Annual Accounts 2022 <a href="/resources/2023/accounting-2022.pdf">PDF</a> revision <a href="/resources/2023/Revisionsbericht_e_editiones_2022.pdf">PDF</a></li>
+<li>[ad 6] <a href="/resources/2023/budget-2023.pdf">Budget 2023</a></li>
+</ul>
 <h3 id="assembly-2022-5th-april-2022" tabindex="-1">Assembly 2022 5th April 2022</h3>
 <ul>
 <li>Invitation/Agenda - 2nd AGM of e-editiones (german, english) <a href="/resources/2022/Invitation_Agenda_2ndAGM e-editiones.pdf">PDF</a></li>
-<li>[ad 3] Protokoll der Sitzung vom 1.3.2021 (deutsch) <a href="/resources/2022/20210301-meeting_minutes.pdf" title="20210301-meeting_minutes">PDF</a></li>
+<li>[ad 3] Protokoll der Sitzung vom 1.3.2021 (deutsch) [<a href="/resources/2022/20210301-meeting_minutes.pdf">PDF</a>]</li>
 <li>[ad 4] <a href="/posts/newsletter-2022-1/">Annual Report (english)/Newsletter 2022/1</a></li>
 <li>[ad 5] Annual Accounts 2021 <a href="/resources/2022/05a_Bilanz_Erfolgsrechung_2021.pdf">PDF</a> and revision <a href="/resources/2022/05b_2021_Revisionsbericht_e-editiones.pdf">PDF</a></li>
 <li>[ad 6] Budget 2022 <a href="/resources/2022/06_budget_e-editiones_2022.pdf">PDF</a></li>
@@ -133,7 +140,7 @@
         
         <aside class="col-lg-3 col-md-3">
             <nav class="toc" >
-        <ul><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
+        <ul><li><a href="#assembly-2023-2nd-may-2023-(16-h-cest)">Assembly 2023 2nd May 2023 (16 h CEST)</a></li><li><a href="#assembly-2022-5th-april-2022">Assembly 2022 5th April 2022</a></li><li><a href="#assembly-2021-1st-march-2021">Assembly 2021 1st March 2021</a></li><li><a href="#amendments-to-the-statutes-5th-nov-2020">Amendments to the statutes 5th Nov 2020</a></li><li><a href="#founding-meeting-4th-may-2020">Founding meeting 4th May 2020</a></li></ul>
       </nav>
         </aside>
         
